# ollama-turbo-quant-pe

./: .gitignore  README.md  USAGE.md  launch-non-turbo.sh  launch-turbo.sh  ready.sh
backend/: Cargo.toml
backend-turbo/: Cargo.toml
backend-turbo/src/: handlers.rs  main.rs  ollama_client.rs  turbo_processor.rs  types.rs
backend/src/: handlers.rs  main.rs  ollama_client.rs  types.rs
docs/: index.html
frontend/: index.html  package.json  vite.config.ts
frontend-turbo/: index.html  package.json  vite.config.ts
frontend-turbo/src/: App.tsx  styles.css
frontend-turbo/src/components/: PromptEditor.tsx  ResponseEditor.tsx  ResponseViewer.tsx
frontend/src/: App.tsx  styles.css
frontend/src/components/: PromptEditor.tsx  ResponseViewer.tsx
