[package]
name = "backend_turbo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
futures = "0.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio-stream = "0.1"
tokio-util = "0.7"
url = "2.4"
tower-http = { version = "0.5", features = ["cors"] }
turbo-quant = { git = "https://github.com/RecursiveIntell/turbo-quant" }
nalgebra = "0.32"
rand = "0.8"
